--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,10 @@
-[tool.poetry]
+[project]
 name = "mcp-invest"
 version = "0.1.0"
-description = ""
+description = "MCP Python server for invest SDK"
 authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = ">=3.10"
-
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires-python = ">=3.13"
+dependencies = [
+    "mcp[cli]>=1.7.1",
+]
